adjust the test values

--- a/experiments/reads/values.yaml
+++ b/experiments/reads/values.yaml
@@ -16,9 +16,9 @@ clients:
   - id: 11
     domain: "client_11"
     port: 8080
-  - id: 12
-    domain: "client_12"
-    port: 8080
+  # - id: 12
+  #   domain: "client_12"
+  #   port: 8080
 
 flags:
   client:
@@ -26,8 +26,8 @@ flags:
     keyLength: 8
     valueLength: 8
     writeRequestRatio: 0.1
-    arrivalRate: 50
-    testDuration: 10
+    arrivalRate: 10
+    testDuration: 30
   network:
     artificialLatency: 20 # in ms
     debugLevel: 0 # <=0 means no debug
